# Agentic-BI-Analyst

./: README.md  agent_backend.py  app.py  docker-compose.yml  main.py  pyproject.toml  utils.py
backend/: Dockerfile  agent_backend.py  main.py  utils.py
backend/prompt-templates/: evaluator_prompt_template.py  generator_prompt_template.py
backend/schema/: chart_code_schema.py  evaluation_rubric_schema.py
data/: titanic.csv
frontend/: Dockerfile  app.py
prompt-templates/: evaluator_prompt_template.py  generator_prompt_template.py
prompts/: evaluator_prompt.json  generator_prompt.json
schema/: analyst_state_schema.py  evaluation_rubric_schema.py
